# tic-tac-brainiac

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml
documents/: architecture.plantuml
