[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tic-tac-brainiac"
version = "1.0.0"
description = "Tic-Tac-Toe with learning agents using matchbox-rl"
requires-python = ">=3.10"
dependencies = [
    "matchbox-rl>=1.0.0",
    "numpy>=2.0",
    "matplotlib>=3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["library"]

[tool.black]
line-length = 150
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
